--- a/src/Blazor.Server.UI/Pages/Authentication/Login.razor
+++ b/src/Blazor.Server.UI/Pages/Authentication/Login.razor
@@ -145,7 +145,7 @@
                         {
                             var roles = await UserManager.GetRolesAsync(user);
                             await TokenProvider.Login(user);
-                            if (roles.Any(x => x == RoleName.Pilots) &&
+                            if (roles.Any(x => x == RoleName.Driver) &&
                                 (!roles.Any(x => x == RoleName.Admin) &&
                                     !roles.Any(x => x == RoleName.SuperAdmin))
                                 )
