--- a/src/Blazor.Server.UI/Pages/Buses/Buses.razor
+++ b/src/Blazor.Server.UI/Pages/Buses/Buses.razor
@@ -182,7 +182,6 @@
                 }
             </CellTemplate>
         </TemplateColumn>
-        @*TODO: Define the fields that should be displayed in data table*@
         <PropertyColumn Property="x => x.PlatNumber" Title="@L[_currentDto.GetMemberDescription(x=>x.PlatNumber)]">
             <CellTemplate>
                 <div class="d-flex flex-column">
@@ -191,6 +190,9 @@
                </div>
             </CellTemplate>
         </PropertyColumn>
+        <PropertyColumn Property="x => x.Type" Title="@L[_currentDto.GetMemberDescription(x=>x.Type)]" />
+        <PropertyColumn Property="x => x.Make" Title="@L[_currentDto.GetMemberDescription(x=>x.Make)]" />
+        <PropertyColumn Property="x => x.Model" Title="@L[_currentDto.GetMemberDescription(x=>x.Model)]" />
         <PropertyColumn Property="x => x.Status" Title="@L[_currentDto.GetMemberDescription(x=>x.Status)]">
             <CellTemplate>
                 <div class="d-flex flex-column">
