--- a/src/Blazor.Server.UI/Pages/Mobile/Trip/Components/StudentOnBoardTotalCard.razor
+++ b/src/Blazor.Server.UI/Pages/Mobile/Trip/Components/StudentOnBoardTotalCard.razor
@@ -1,8 +1,11 @@
 ﻿@using CleanArchitecture.Blazor.Application.Features.TripReports.Queries.GetById
+<div class="d-flex flex-column align-center">
+    <MudText Typo="Typo.h6">Total passengers on board</MudText>
+    <MudPaper Elevation="0" Class="pa-3" Style="height:100px; width:160px;">
+        <div class="d-lg-block rounded px-5" style="height:100%; width:100%;background-color:#FFD98E;border-radius:100px !important "><MudText Align="Align.Center" Typo="Typo.h3" Style="font-size:80px;font-weight:700;line-height:80px">@Total</MudText></div>
+    </MudPaper>
+</div>
 
-<MudPaper Elevation="0" Class="pa-3" Style="height:100px; width:160px;">
-    <div class="d-lg-block rounded px-5" style="height:100%; width:100%;background-color:#FFD98E;border-radius:100px !important "><MudText Typo="Typo.h3" Style="font-size:80px;font-weight:700;line-height:80px">@Total</MudText></div>
-</MudPaper>
 
 @code {
 
